fazer pedido, listar pedidos e model de usuario